	- fixed handle leak in read_file() when it encountered an error during reading
	- explicitly use "-debugger internal" when "use_debug" is set to 1
	- only process software list entries, that doen't have "supported" set to "no"
	- fixed memory leak when processing software list entries
	
	create_report
	- pass the file descriptor as parameter to PRINT_INFO
	- improved layout of comparison report
	- removed option "ignore_exitcode_4" and always filter the mandatory device messages
	- filter unprintable characters from input XMLs
	- improved summary a bit
	- "called within reset scope by" errors did not include stderr
	- added hard-coded "runtime error:" reporting for now (only generated by UndefinedBehaviorSanitizer)
	- added tagmap report (report_type 3)
	- added speed report (report_type 4)
	- added option "tagmap_threshold" for report_type 3
	- added option "speed_threshold" for report_type 4
	- renamed option "dokuwiki_format" to "wiki_format"
	- use GitHub "Markdown" format when "wiki_format" is set to 2
	- added separate entry in summary for runtime errors

0.74
	- removed CC definition from makefile
	- updated warnings for Clang 5.0
	- updated warnings for GCC 5.4 (ubuntu 16.04)
	- use $(RM) in makefile
	- added SANITIZE makefile option to specify sanitzer(s)
	- added detection of operating system to makefile
	- fixed warning in mrt_system() on Windows by checking against proper value
	- updated bundled libxml2 to 2.9.3 and use 64-bit version to fix linking on Windows with latest MinGW
	- updated bundled zlib to 1.2.8 and use 64-bit version to fix linking on Windows with latest MinGW
	- adjusted makefile for Windows linking - no longer requires library files to be specified explicitly
	- updated copyright
	- removed references to specific library versions from README
	- adjusted author name
	- added missing IN_LIBXML define in create_image_xml.c
	- changed libmxl2 includes to angle-brackets
	- removed unnecessary bundled iconv