@@ -35,7 +35,7 @@ CFLAGS += -DLOG_ALLOC
 endif
 
 ifdef SANITIZE
-CFLAGS += -fsanitize=$(SANITIZE) -fno-omit-frame-pointer
+CFLAGS += -fsanitize=$(SANITIZE) -fno-omit-frame-pointer -DNO_ASSERT
 endif
 
 all: mame_regtest$(BIN_EXT) create_image_xml$(BIN_EXT) create_report$(BIN_EXT)
